#173873092 Auth 2.0 or  JWT integration As a normal user/Admin Login screen with valid user & Password Part 2 .
#173647231 As a normal user/Admin Logon screen with valid user & Password .

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -56,7 +56,14 @@ spring:
         prepStmtCacheSqlLimit: 2048
         useServerPrepStmts: true
   jpa:
-    show-sql: true
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
     contexts: dev, faker
@@ -81,6 +88,8 @@ spring:
 
 server:
   port: 8081
+  servlet:
+    context-path: /rasoiyya
 
 # ===================================================================
 # JHipster specific properties
